<resources>
    <string name="app_name">TaskTabraiz</string>
    <string name="movie_poster">movie poster</string>
    <string name="filter">Filter</string>
    <string name="release_before">Release on or before</string>
    <string name="released_after">Released on or after</string>
    <string name="apply">Apply</string>
    <string name="clear_filter">Clear filter</string>
    <string name="network_error">Network Error, check your connection and try again</string>
    <string name="try_again">Try again</string>
    <string name="release_date">Release Date :</string>
    <string name="plus_18">18+ :</string>
    <string name="budget">Budget :</string>

</resources>
