<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" >

    <data>
        <variable name="viewModel" type="com.assignment.tasktabraiz.moviedetail.model.MovieDetail"/>
    </data>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/movieDetailLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:padding="@dimen/padding_8dp"
            android:visibility="gone"
            >

            <ImageView
                android:id="@+id/movieImage"
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:scaleType="centerCrop"
                app:posterPath="@{viewModel.posterPath}"
                android:contentDescription="@string/movie_poster" />


            <TextView
                style="@android:style/TextAppearance.Large"
                android:id="@+id/movieTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{viewModel.title}"
                android:layout_toRightOf="@+id/movieImage"
                android:layout_toEndOf="@+id/movieImage"
                android:padding="@dimen/padding_4dp"
                />


            <TextView
                style="@style/TextAppearance.AppCompat.Caption"
                android:id="@+id/movieOverview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/movieTitle"
                android:layout_toRightOf="@id/movieImage"
                android:text="@{viewModel.overview}"
                android:layout_toEndOf="@id/movieImage"
                android:padding="@dimen/padding_4dp"
                />

            <TextView
                android:id="@+id/labelReleaseDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/release_date"
                android:layout_below="@+id/movieImage"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/releaseDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/movieImage"
                android:text="@{viewModel.releaseDate}"
                android:layout_toRightOf="@+id/labelReleaseDate"
                android:layout_toEndOf="@+id/labelReleaseDate" />

            <TextView
                android:id="@+id/labelAdult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plus_18"
                android:layout_below="@+id/labelReleaseDate"
                android:textStyle="bold"

                />
            <TextView
                android:id="@+id/adult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/labelReleaseDate"
                android:text="@{viewModel.adult}"
                android:layout_toRightOf="@+id/labelReleaseDate"
                android:layout_toEndOf="@+id/labelReleaseDate" />

            <TextView
                android:id="@+id/labelBudget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/budget"
                android:layout_below="@+id/labelAdult"
                android:textStyle="bold"

                />
            <TextView
                android:id="@+id/budget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/labelAdult"
                android:text="@{viewModel.budget}"
                android:layout_toRightOf="@+id/labelBudget"
                android:layout_toEndOf="@+id/labelBudget" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_centerInParent="true" />

        </RelativeLayout>
        <include
            android:layout_centerInParent="true"
            layout="@layout/layout_offline"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" />

    </RelativeLayout>
</layout>